@startuml workspaces
!theme blueprint

entity users {
  *id : uuid
  display_name : text
}

entity workspaces {
  *id : uuid
  --
  name : text
  created_by : uuid
  created_at : timestamptz
}

entity workspace_members {
  *workspace_id : uuid
  *user_id : uuid
  --
  role : workspace_role
  joined_at : timestamptz
}

workspaces ||--o{ workspace_members
users ||--o{ workspace_members
users ||--o{ workspaces : created_by

@enduml
